move virt to onpremise path

--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -12,7 +12,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 - 私有云：私有云部署方式包含本地 IDC 基础设施管理的功能，是一个轻量级的私有云实现，包含了虚拟机、存储、网络、GPU卡和裸金属等功能。
-    - [快速部署私有云](./virt/quickstart-virt)
+    - [快速部署私有云](./onpremise/quickstart-virt)
 - 多云管理：多云管理部署方式包含了纳管 VMware、私有云和公有云的功能，帮助企业统一管理异构 IT 基础设施资源。
     - [使用 ocboot 快速部署多云管理](./cmp/quickstart-ocboot)
     - [使用 docker compose 快速部署多云管理](./cmp/quickstart-docker-compose)
