--- a/i18n/en/docusaurus-plugin-content-docs/current/getting-started/index.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/getting-started/index.mdx
@@ -12,7 +12,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 - Private Cloud: Private cloud deployment includes the function of managing local IDC infrastructure and is a lightweight implementation of private cloud, including virtual machines, storage, network, GPU cards, and bare metal functions.
-    - [Quick Start: Private Cloud Deployment](./virt/quickstart-virt)
+    - [Quick Start: Private Cloud Deployment](./onpremise/quickstart-virt)
 - Multi-Cloud Management: Multi-cloud management deployment includes the functionality of managing VMware, private cloud, and public cloud to help enterprises manage heterogeneous IT infrastructure resources.
     - [Quick Start: Multi-cloud Management Deployment using ocboot](./cmp/quickstart-ocboot)
     - [Quick Start: Multi-cloud Management Deployment using docker compose](./cmp/quickstart-docker-compose)
