--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -20,7 +20,6 @@ import TabItem from '@theme/TabItem';
 - 融合云：融合云部署方式包含了轻量级私有云和多云管理的功能。
     - [快速部署融合云](./full/quickstart-full)
 
-import DocCardList from '@theme/DocCardList';
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+import IndexDocCardList from '@site/src/components/IndexDocCardList';
 
-<DocCardList items={useCurrentSidebarCategory().items} />
+<IndexDocCardList />
