--- a/docs/getting-started/onpremise/faq/index.mdx
+++ b/docs/getting-started/onpremise/faq/index.mdx
@@ -5,8 +5,6 @@ sidebar_position: 4
 
 # 常见问题
 
-import DocCardList from '@theme/DocCardList';
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+import IndexDocCardList from '@site/src/components/IndexDocCardList';
 
-<DocCardList items={useCurrentSidebarCategory().items} />
-
+<IndexDocCardList />
