--- a/docs/guides/onpremise/baremetal/index.mdx
+++ b/docs/guides/onpremise/baremetal/index.mdx
@@ -6,3 +6,7 @@ hide_table_of_contents: true
 # 物理机
 
 介绍如何纳管物理机，以及基于物理机创建裸金属设备。
+
+import IndexDocCardList from '@site/src/components/IndexDocCardList';
+
+<IndexDocCardList />
