--- a/docs/operations/upgrading/index.mdx
+++ b/docs/operations/upgrading/index.mdx
@@ -7,3 +7,6 @@ hide_table_of_contents: true
 
 介绍如何升级平台的服务和组件。
 
+import IndexDocCardList from '@site/src/components/IndexDocCardList';
+
+<IndexDocCardList />
