--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -7,7 +7,6 @@ hide_table_of_contents: true
 
 介绍 cloudpods 各个模块的功能与原理，以及使用方法。
 
-import DocCardList from '@theme/DocCardList';
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+import IndexDocCardList from '@site/src/components/IndexDocCardList';
 
-<DocCardList items={useCurrentSidebarCategory().items} />
+<IndexDocCardList />
