--- a/docs/guides/onpremise/baremetal/create-register.mdx
+++ b/docs/guides/onpremise/baremetal/create-register.mdx
@@ -1,6 +1,5 @@
 ---
 sidebar_position: 2
-toc_max_heading_level: 5
 ---
 
 # 纳管物理机
@@ -26,6 +25,17 @@ toc_max_heading_level: 5
 | 自动注册    | 否           | PXE          | 是                  | 否              | DHCP分配     |
 | 托管        | 是           | -            | -                   | -               | -            |
 
+### PXE引导注册(推荐方式)
+
+该方式要求用户环境存在DHCP Relay，且要求物理机已配置BMC信息，且在引导注册过程中不会改变物理机的BMC信息。如果服务器不支持Redfish，还需要提供服务器的MAC地址。
+
+1. 在平台上配置物理服务器的BMC信息并设置服务器PXE启动等。
+2. Baremetal通过IPMI验证物理服务器的BMC信息。
+3. 验证通过后，收集少量的服务器信息，设置物理服务器为开机启动，物理服务器通过DHCP配置管理口IP地址、
+4. 通过管理网启动引导物理服务器进入PXE引导系统，上报SSH登录信息。
+5. Baremetal通过SSH调用PXE引导系统中的工具，收集服务器信息，并进行管理操作等。
+6. 至此，物理服务器成功注册到平台。
+
 ### ISO引导注册
 
 该方式对网络无要求，但是要求物理机已配置了BMC信息，且服务器支持Redfish API。
@@ -34,17 +44,6 @@ toc_max_heading_level: 5
 2. Baremetal将会通过Redfish API验证物理服务器的BMC信息，进而获取物理服务器的配置信息，如服务器SN、厂商型号以及网卡信息等。
 3. 验证通过后，物理服务器上的Redfish API将会通过带外网加载Baremetal提供的PXE引导系统的ISO。
 4. 进入PXE引导系统后根据配置设置管理口的IP地址，从而使物理服务器可以通过管理网访问Baremetal，上报服务器的SSH登录信息。
-5. Baremetal通过SSH调用PXE引导系统中的工具，收集服务器信息，并进行管理操作等。
-6. 至此，物理服务器成功注册到平台。
-
-### PXE引导注册
-
-该方式要求用户环境存在DHCP Relay，且要求物理机已配置BMC信息，且在引导注册过程中不会改变物理机的BMC信息。如果服务器不支持Redfish，还需要提供服务器的MAC地址。
-
-1. 在平台上配置物理服务器的BMC信息并设置服务器PXE启动等。
-2. Baremetal通过IPMI验证物理服务器的BMC信息。
-3. 验证通过后，收集少量的服务器信息，设置物理服务器为开机启动，物理服务器通过DHCP配置管理口IP地址、
-4. 通过管理网启动引导物理服务器进入PXE引导系统，上报SSH登录信息。
 5. Baremetal通过SSH调用PXE引导系统中的工具，收集服务器信息，并进行管理操作等。
 6. 至此，物理服务器成功注册到平台。
 
