--- a/docs/guides/onpremise/index.mdx
+++ b/docs/guides/onpremise/index.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
 hide_table_of_contents: true
 ---
 
@@ -7,7 +7,6 @@ hide_table_of_contents: true
 
 介绍内置私有云的功能。
 
-import DocCardList from '@theme/DocCardList';
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+import IndexDocCardList from '@site/src/components/IndexDocCardList';
 
-<DocCardList items={useCurrentSidebarCategory().items} />
+<IndexDocCardList />
