content: operations/ha

--- a/docs/operations/databases/index.mdx
+++ b/docs/operations/databases/index.mdx
@@ -4,7 +4,7 @@ sidebar_position: 7
 
 # 数据库运维
 
-Cloudpods 采用 Mariadb 作为主要数据库，本文介绍数据库运维相关的内容。
+平台使用 Mariadb/MySQL 作为主要数据库，本文介绍数据库运维相关的内容。
 
 import IndexDocCardList from '@site/src/components/IndexDocCardList';
 
