comment fonter links

--- a/docs/contact/index.mdx
+++ b/docs/contact/index.mdx
@@ -8,4 +8,6 @@ sidebar_position: 6
 
 - 微信：通过扫描下方二维码联系我们
 
-![contact use wechat](/img/docs/contact/contact_me_qr_20230321.png)
+import WechatQRCode from '@site/static/img/docs/contact/contact_me_qr_20230321.png';
+
+<img src={WechatQRCode} width="300" />
