--- a/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_quickstart-ocboot-env.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_quickstart-ocboot-env.mdx
@@ -2,7 +2,7 @@
     - [CentOS 7.6~7.9 Minimal](http://isoredirect.centos.org/centos/7/isos): Supports x86_64 and arm64
     - [Debian 10/11](https://www.debian.org/distrib/): Supports x86_64 and arm64
     - [Ubuntu 22.04](https://releases.ubuntu.com/jammy/): Supports only x86_64
-    - [Kylin V10 SP2/SP3](https://www.kylinos.cn/scheme/server/1.html): Supports x86_64 and arm64
+    - [Kylin V10 SP2](https://www.kylinos.cn/scheme/server/1.html): Supports x86_64 and arm64
     - [Deepin UOS kongzi](https://www.chinauos.com/): Supports x86_64 and arm64
 - The operating system needs to be a clean version, as the deployment tool will build the specified version of Kubernetes cluster from scratch. Ensure that the system does not have container management tools such as Kubernetes and Docker installed, otherwise conflicts may occur and cause installation abnormalities.
 - Minimum system requirements: CPU 4 cores, 8GiB memory, 100GiB storage.
