fix: 1. adjust alignement of homepage 2. mv db-ha to ops

--- a/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_ha-env.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_ha-env.mdx
@@ -18,7 +18,7 @@ The deployment of the DB is currently not managed by the ocboot deployment tool 
 - Debian 10-11 (X86_64 and ARM64) installs MariaDB 10.3.1 by default
 - Kylin V10 sp2 (X86_64 and ARM64) installs MariaDB 10.3.4 by default
 
-In addition, the deployment of a high availability database can also refer to the document: [Deploy Mariadb HA environment](../misc/db-ha).
+In addition, the deployment of a high availability database can also refer to the document: [Deploy Mariadb HA environment](../../operations/databases/db-ha).
 
 ## NTP consistency of high availability cluster
 
