feat: add v3.10.8 release note

--- a/docs/release-notes/v3_10_x.md
+++ b/docs/release-notes/v3_10_x.md
@@ -4,6 +4,47 @@ sidebar_position: -310
 
 # v3.10.x
 
+## v3.10.8
+
+date: 2023-12-08
+
+本次发布为3.10发布以来最重要小版本发布，包含三项重大更新。
+
+1. 虚拟机部署方式改为采用轻量虚拟机模式。本地私有云部署虚拟机时通过启动轻量虚拟机挂载虚拟机磁盘，实现对虚拟机磁盘操作系统识别和配置文件初始化。相比原来通过宿主机nbd内核模块挂载虚拟机磁盘进行部署的方式，摆脱了对宿主机内核的依赖，解决在宿主机环境上LVM资源冲突的问题，明显提高虚拟机部署的可靠性。
+2. 将默认监控存储从Influxdb替换为VictoriaMetrics，后者在响应速度和存储空间等方面都有更优异的表现。
+3. 支持将纳管的Cloudpods虚拟机迁移到内置私有云平台，方便多个Cloudpods集群的合并整合。
+
+同时，我们对文档的基础框架进行了升级，将文档迁移到更加现代化的 docusaurus 来构建。新版本的文档已经可通过 [https://v2.cloudpods.org](https://v2.cloudpods.org) 预览。等新版文档内容完善后，将把Cloudpods文档站点URL切换到新版。
+
+### 功能优化 (Enhancements)
+
+- 【主机】使用轻量虚机方式替换 nbd 挂载的部署方式
+- 【主机】优化虚拟机镜像排序及过滤
+- 【多云】云账号只读模式模式支持资源标签单向同步
+- 【多云】Zstack支持同步共享存储
+- 【多云】PVE平台虚拟机支持打开VNC
+
+### 问题修复 (Fixes)
+
+- 【主机】修复主机列表导出失败问题
+- 【主机】修复主备机切换host-agent panic的问题
+- 【主机】修复 SR-IOV 网卡热插拔失败的问题
+- 【主机】修复 SR-IOV 网卡监控数据获取不准确的问题
+
+### 新功能 (New Features)
+
+- 【主机】支持纳管Cloudpods主机迁移到本地
+- 【监控】支持使用 VictoriaMetrics 作为监控后端
+
+:::tip
+- 为了避免升级导致的服务中断，v3.10.8只会默认部署VictoriaMetrics，但不默认启用。需要参考： [从 Influxdb 手动迁移切换到VictoriaMetrics](../operations/monitoring/migrating-to-vm.md)。从3.11开始将默认启用VictoriaMetrics。
+- 虚拟机部署方式默认采用轻量虚拟机方式，但原有采用nbd方式的虚拟机部署方式也依然保留，可以通过修改配置切换回去。
+:::
+
+### CHANGELOG
+
+具体变更请参考: [CHANGELOG v3.10.8](../development/changelog/release-3_10/3-10-8.md)。
+
 ## v3.10.7
 
 date: 2023-11-08
@@ -52,7 +93,7 @@ date: 2023-11-08
 - 【容器】修复导入集群失败的问题
 - 【多云】修复基于docker compose 部署，云上子账号无法同步的问题
 
-### 问题修复 (Fixes)
+### 新功能 (New Features)
 
 - 【部署】支持基于 Ubuntu 22.04 x86_64 版本部署平台
 - 【主机】支持 rocky linux 镜像创建虚拟机
