fix deadlink in release-notes

--- a/docs/operations/upgrading/ocboot-upgrade.mdx
+++ b/docs/operations/upgrading/ocboot-upgrade.mdx
@@ -44,7 +44,7 @@ import GetClusterVersion from '@site/src/components/GetClusterVersion'
 ```bash
 # 本地安装 ansible
 $ python3 -m pip install --upgrade pip setuptools wheel
-$ python3 -m pip install --upgrade ansible paramiko
+$ python3 -m pip install 'ansible<=9.0.0' paramiko
 ```
 
 下载 ocboot 工具到本地
