--- a/docs/release-notes/v3_10_x.md
+++ b/docs/release-notes/v3_10_x.md
@@ -43,7 +43,7 @@ date: 2023-12-08
 
 ### CHANGELOG
 
-具体变更请参考: [CHANGELOG v3.10.8](../development/changelog/release-3_10/3-10-8.md)。
+具体变更请参考: [CHANGELOG v3.10.8](../development/changelog/release-3_10/3-10-8)。
 
 ## v3.10.7
 
