docs(translation): 翻译校对 hidden-feature-config change-node-ip

--- a/docs/operations/component.mdx
+++ b/docs/operations/component.mdx
@@ -4,7 +4,7 @@ sidebar_position: 1
 
 # 组件介绍
 
-Cloudpods 平台部署的大部分服务都是容器话运行的，使用 ocboot 和 helm 部署的服务是直接运行在 Kubernetes 上的，使用 docker compose 部署的环境则是直接使用 docker 运行。
+Cloudpods 平台部署的大部分服务都是容器化运行的，使用 ocboot 和 helm 部署的服务是直接运行在 Kubernetes 上的，使用 docker compose 部署的环境则是直接使用 docker 运行。
 
 下面将介绍下平台的组件服务。
 
