docs(translation): 翻译校对 20231214

--- a/docs/operations/upgrading/ocboot-upgrade.mdx
+++ b/docs/operations/upgrading/ocboot-upgrade.mdx
@@ -68,7 +68,7 @@ import OcbootFetchCheckout from '@site/src/components/OcbootFetchCheckout';
 1. 本机能够 ssh 远程登录 PRIMARY_MASTER_HOST
 2. PRIMARY_MASTER_HOST 能够 ssh 免密码登录集群中的其它节点
 
-如果没有设置免密码登录，请使用 *ssh-copy-id -i ~/.ssh/id_rsa.pub root@PRIMARY_MASTER_HOST* 命令把公钥下发到自己环境对应的节点。
+如果没有设置免密码登录，请使用 `ssh-copy-id -i ~/.ssh/id_rsa.pub root@PRIMARY_MASTER_HOST` 命令把公钥下发到自己环境对应的节点。
 
 升级的版本号可以到 [CHANGELOG 3.10 页面](../../development/changelog/release-3_10/) 查询。
 
