--- a/docs/release-notes/v3_10_x.md
+++ b/docs/release-notes/v3_10_x.md
@@ -37,7 +37,7 @@ date: 2023-12-08
 - 【监控】支持使用 VictoriaMetrics 作为监控后端
 
 :::tip
-- 为了避免升级导致的服务中断，v3.10.8只会默认部署VictoriaMetrics，但不默认启用。需要参考： [从 Influxdb 手动迁移切换到VictoriaMetrics](../operations/monitoring/migrating-to-vm.md)。从3.11开始将默认启用VictoriaMetrics。
+- 为了避免升级导致的服务中断，v3.10.8只会默认部署VictoriaMetrics，但不默认启用。需要参考： [从 Influxdb 手动迁移切换到VictoriaMetrics](../operations/monitoring/migrating-to-vm)。从3.11开始将默认启用VictoriaMetrics。
 - 虚拟机部署方式默认采用轻量虚拟机方式，但原有采用nbd方式的虚拟机部署方式也依然保留，可以通过修改配置切换回去。
 :::
 
@@ -309,7 +309,7 @@ date: 2023-06-01
 - 【容器】修复K8s集群新建磁盘报错的问题
 - 【容器】修复 helm release 升级不生效的问题
 - 【主机】修复虚机删除时报 ‘Stage Complete Not Found’ 的问题
-- 【主机】修复 virtio 磁盘驱动热插拔失败的问题 
+- 【主机】修复 virtio 磁盘驱动热插拔失败的问题
 - 【主机】修复 cdrom 启动顺序的问题
 - 【主机】修复3.9升级到3.10的一些不兼容性问题
 - 【主机】修复虚机包含快照迁移失败的问题
