--- a/i18n/en/docusaurus-plugin-content-docs/current/operations/index.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/operations/index.mdx
@@ -3,7 +3,7 @@ sidebar_position: 4
 hide_table_of_contents: true
 ---
 
-# OPS
+# Operations
 
 Contents about daily operations of the platform, including upgrade, reinstallation, routine maitenance, etc.
 
