--- a/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
@@ -4,6 +4,7 @@
     - [Ubuntu 22.04](https://releases.ubuntu.com/jammy/): 仅支持 x86_64
     - [银河麒麟V10 SP2](https://www.kylinos.cn/scheme/server/1.html): 支持 x86_64 和 arm64
     - [统信 UOS kongzi](https://www.chinauos.com/): 支持 x86_64 和 arm64
+    - [OpenEuler 22.03 LTS](https://www.openeuler.org/): 支持 x86_64 和 arm64
 - 操作系统需要是干净的版本，因为部署工具会重头搭建指定版本的 kubernetes 集群，所以确保系统没有安装 kubernetes, docker 等容器管理工具，否则会出现冲突导致安装异常
 - 最低配置要求: CPU 4核, 内存 8GiB, 存储 100GiB
 - 虚拟机和服务使用的存储路径都在 **/opt** 目录下，所以理想环境下建议单独给 **/opt** 目录设置挂载点
