--- a/i18n/en/docusaurus-plugin-content-docs/current/development/changelog/release-3_7/3-7-0.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/development/changelog/release-3_7/3-7-0.md
@@ -2150,3 +2150,4 @@ Repo: https://github.com/yunionio/sdnagent
 
 [sdnagent - v3.7.0]: https://github.com/yunionio/sdnagent/compare/v3.6.22...v3.7.0
 t/compare/v3.6.22...v3.7.0
+t/compare/v3.6.22...v3.7.0
