--- a/docs/guides/onpremise/storage/blockstorage/index.mdx
+++ b/docs/guides/onpremise/storage/blockstorage/index.mdx
@@ -25,7 +25,7 @@ sidebar_position: 1
 | 访问接口\部署架构        |  本地访问           | 集中式网络访问       | 去中心分布式访问 |
 |----------------|-------------------|--------------------|----------------|
 | 文件接口        | 本地存储            | NAS                |                |
-| 块接口          | 本地LVM            | LVM                |                |
+| 块接口          | 本地LVM            | cLVM               |                |
 | 自定义接口       |                   |                    | Ceph RBD       |
 
 ## 支持存储类型
