--- a/i18n/en/docusaurus-plugin-content-docs/current/getting-started/full/index.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/getting-started/full/index.mdx
@@ -2,9 +2,9 @@
 sidebar_position: 3
 ---
 
-# Hybrid Cloud
+# Unified Cloud
 
-Hybrid Cloud Installation and Deployment
+Unified Cloud Installation and Deployment
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
