--- a/i18n/en/docusaurus-plugin-content-docs/current/getting-started/index.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/getting-started/index.mdx
@@ -17,8 +17,8 @@ import TabItem from '@theme/TabItem';
     - [Quick Start: Multi-cloud Management Deployment using ocboot](./cmp/quickstart-ocboot)
     - [Quick Start: Multi-cloud Management Deployment using docker compose](./cmp/quickstart-docker-compose)
     - [Quick Start: Multi-cloud Management Deployment using helm on Kubernetes](./cmp/quickstart-k8s-helm)
-- Hybrid Cloud: Hybrid cloud deployment includes the functionality of lightweight private cloud and multi-cloud management.
-    - [Quick Start: Hybrid Cloud Deployment](./full/quickstart-full)
+- Unified Cloud: Unified cloud deployment includes the functionality of both lightweight private cloud and multi-cloud management.
+    - [Quick Start: Unified Cloud Deployment](./full/quickstart-full)
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
