feat: v3.10.10 release note

--- a/docs/release-notes/v3_10_x.md
+++ b/docs/release-notes/v3_10_x.md
@@ -4,6 +4,51 @@ sidebar_position: -310
 
 # v3.10.x
 
+## v3.10.10 (含v3.10.9)
+
+date: 2023-12-26
+
+本次发布为3.10在2023年的最后一个小版本发布（因测试原因跳过3.10.9版本），主要完善自3.10.8发布后集中反馈的轻量虚拟机部署模式问题和VictoriaMetrics监控问题，包括：
+
+1. 轻量虚拟机部署模式无法部署采用非 /opt/cloud 目录下本地存储的虚拟机
+2. 减少轻量虚拟机内存用量从1G到256MB，每台宿主机部署并发度从2提高到5，提升部署效率
+3. docker-compose安装模式下也支持轻量虚拟机部署机制，支持对纳管VMware磁盘的初始化
+4. 提供虚拟机部署机制文档 https://www.cloudpods.org/docs/guides/onpremise/host/host-deployer
+5. 修复使用 VictoriaMetrics 创建告警策略失败，查询长时间范围没有生效等问题
+
+另外，文档站点将正式切换为v2，届时通过 https://www.cloudpods.org 将直接访问v2文档，旧版文档可通过 https://v1.cloudpods.org 访问。
+
+### 功能优化 (Enhancements)
+
+- 【主机】轻量虚拟机减少内存用量到 256MB
+- 【部署】支持基于docker-compose部署管理VMware
+- 【物理机】支持 grub 使用 tftp 下载引导 kernel 和 initrd
+- 【部署】使用 ocboot 部署会自动打开 climc bash completion ，提升命令行补全体验
+- 【部署】兼容 ansible 2.16 版本，如果使用不兼容版本会提前报错退出
+
+### 问题修复 (Fixes)
+
+- 【主机】修复使用虚机无法部署非 /opt/cloud 目录下磁盘的问题
+- 【主机】修复谷歌云主机创建失败，无法密码登录等问题
+- 【主机】修复纳管云平台的存储过大，导致数据库写入失败引起的同步失败问题
+- 【主机】修复部分发行版因为部署 telegraf 监控 agent 调用 crontab 命令失败的问题
+- 【调度】修复导入 VMware 账号后，网络缓存等信息没有及时生效导致调度失败的问题
+- 【服务配置】修复通过 service-config-edit 变更配置没有及时生效的问题
+- 【监控】修复使用 VictoriaMetrics 创建告警策略失败，查询长时间范围没有生效等问题
+
+### 新功能 (New Features)
+
+- 【部署】支持部署到 ubuntu 22.04 arm64 版本
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.10.10](../development/changelog/release-3_10/3-10-10)
+- [CHANGELOG v3.10.9](../development/changelog/release-3_10/3-10-9)
+
+本次发布为3.10在2023年的最后一个小版本发布，明年初将迎来3.11的发布，3.11为3.0的最后一个小版本，将作为cloudpods的第一个LTS版本长期维护。之后将进入4.0时代。
+
 ## v3.10.8
 
 date: 2023-12-08
