fix(ansible): ansible minimal version set to 2.11.12

--- a/docs/getting-started/_parts/_quickstart-ocboot-ansible.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-ansible.mdx
@@ -1,7 +1,7 @@
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-首先需要安装ansible和git，ansible版本要求最低2.9.27，其中2.11.12测试较多。
+首先需要安装ansible和git，ansible版本要求最低2.11.12。
 
 <Tabs>
   <TabItem value="CentOS 7" label="CentOS 7" default>
