--- a/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_quickstart-ocboot-ansible.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_quickstart-ocboot-ansible.mdx
@@ -1,7 +1,7 @@
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-First, you need to install ansible and git. The minimum required version of Ansible is 2.9.27, with version 2.11.12 being more thoroughly tested.
+First, you need to install ansible and git. The minimum required version of Ansible is `2.11.12`.
 
 <Tabs>
   <TabItem value="CentOS 7" label="CentOS 7" default>
